--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@
     </style>
     <script>
       // Configuration
-      const showSettings = true; // Set to false to hide settings button
+      const showSettings = false; // Set to false to hide settings button
 
       // Electron preload: require ipcRenderer for backend communication
       const { ipcRenderer } = require("electron");
